# learning-open-gl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
1.getting-started/2.1.hello-triangle/: main.cpp
1.getting-started/2.2.hello-rectangle/: main.cpp
1.getting-started/3.4.shader-class/: main.cpp
1.getting-started/3.5.shader-communication/: fragment.glsl  main.cpp  vertex.glsl
1.getting-started/4.1.textures/: fragment.glsl  main.cpp
1.getting-started/4.3.textures-reversed/: fragment.glsl  main.cpp
1.getting-started/4.5.texture-input/: main.cpp
1.getting-started/5.1.transformations/: main.cpp
1.getting-started/5.2.transformation-shaders/: main.cpp
1.getting-started/5.3.transformation-scaling/: main.cpp
1.getting-started/6.2.cube/: main.cpp
1.getting-started/7.4.camera-rotation/: main.cpp
1.getting-started/7.5.camera-zoom/: fragment.glsl  main.cpp
2.lighting/10.2.light-properties/: main.cpp
2.lighting/10.3.changing-light/: cube-fragment.glsl
2.lighting/11.1.diffuse-maps/: main.cpp
2.lighting/11.2.specular-maps/: cube-fragment.glsl
learning-cpp/: main.cpp
open-gl/: CMakeLists.txt
open-gl/1.getting-started/2.1.hello-triangle/: main.cpp
open-gl/1.getting-started/2.3.hello-triangle-exercise-1/: main.cpp
open-gl/1.getting-started/2.4.hello-triangle-exercise-2/: main.cpp
open-gl/1.getting-started/3.1.shader-variables/: main.cpp
open-gl/1.getting-started/3.2.shader-uniform/: main.cpp
open-gl/1.getting-started/3.3.shader-interpolation/: main.cpp
open-gl/1.getting-started/3.4.shader-class/: main.cpp
open-gl/1.getting-started/4.1.textures/: fragment.glsl  main.cpp  vertex.glsl
open-gl/1.getting-started/4.2.textures-combined/: fragment.glsl
open-gl/1.getting-started/4.4.texture-wrapping/: fragment.glsl  main.cpp
open-gl/1.getting-started/5.2.transformation-shaders/: fragment.glsl
open-gl/1.getting-started/5.3.transformation-scaling/: vertex.glsl
open-gl/1.getting-started/6.1.perspective/: main.cpp  vertex.glsl
open-gl/1.getting-started/6.3.depth-buffer/: main.cpp
open-gl/1.getting-started/6.4.more-cubes/: main.cpp
open-gl/1.getting-started/7.1.camera/: main.cpp  vertex.glsl
open-gl/1.getting-started/7.2.camera-look-at/: main.cpp
open-gl/1.getting-started/7.3.camera-delta-time/: main.cpp
open-gl/2.lighting/10.1.material-properties/: cube-fragment.glsl  main.cpp
open-gl/2.lighting/10.3.changing-light/: main.cpp
open-gl/2.lighting/11.1.diffuse-maps/: cube-fragment.glsl
open-gl/2.lighting/11.2.specular-maps/: main.cpp
open-gl/2.lighting/12.1.directional-light/: cube-fragment.glsl
open-gl/2.lighting/12.2.point-light/: main.cpp
open-gl/2.lighting/12.3.spot-light/: cube-fragment.glsl
open-gl/2.lighting/12.4.spot-light-soft/: main.cpp
open-gl/2.lighting/13.1.multiple-lights/: cube-fragment.glsl  cube-vertex.glsl  main.cpp
open-gl/2.lighting/8.1.colours/: main.cpp
open-gl/2.lighting/9.2.diffuse-lighting/: cube-vertex.glsl
open-gl/3-creating-a-window/: CMakeLists.txt  main.cpp
open-gl/3.models/14.1.model-loading/: cube-fragment.glsl  main.cpp  model-fragment.glsl
open-gl/4-hello-window/: CMakeLists.txt  main.cpp
open-gl/4.advanced-open-gl/15.1.depth-testing/: fragment.glsl  main.cpp
open-gl/4.advanced-open-gl/15.2.depth-buffer/: fragment.glsl
open-gl/4.advanced-open-gl/16.1.stencil-buffer/: main.cpp
open-gl/4.advanced-open-gl/17.1.blending-discard/: blend.glsl  main.cpp
open-gl/4.advanced-open-gl/20.1.inverse/: fragment.glsl  quad-fragment.glsl  quad-vertex.glsl
open-gl/4.advanced-open-gl/20.2.grayscale/: quad-fragment.glsl
open-gl/4.advanced-open-gl/21.1.kernels/: main.cpp  quad-fragment.glsl
open-gl/4.advanced-open-gl/23.1.skybox/: skybox-vertex.glsl  vertex.glsl
open-gl/4.advanced-open-gl/23.2.skybox-optimised/: skybox-fragment.glsl
open-gl/4.advanced-open-gl/24.1.environment-map/: fragment.glsl  main.cpp  skybox-vertex.glsl  vertex.glsl
open-gl/4.advanced-open-gl/25.1.point-size/: main.cpp
open-gl/4.advanced-open-gl/25.2.frag-coord/: fragment.glsl
open-gl/4.advanced-open-gl/25.3.front-facing/: main.cpp
open-gl/4.advanced-open-gl/25.4.uniform-buffers/: blue.glsl  main.cpp  vertex.glsl
open-gl/4.advanced-open-gl/26.1.geometry-shaders/: geometry.glsl  main.cpp
open-gl/4.advanced-open-gl/26.2.geometry-house/: geometry.glsl  main.cpp  vertex.glsl
open-gl/4.advanced-open-gl/27.1.exploding-objects/: main.cpp  model-fragment.glsl  model-geometry.glsl
open-gl/4.advanced-open-gl/28.1.visualising-normals/: debug-geometry.glsl  debug-vertex.glsl  main.cpp  model-fragment.glsl
open-gl/4.advanced-open-gl/29.1.instancing/: main.cpp
open-gl/4.advanced-open-gl/29.2.instanced-arrays/: fragment.glsl  main.cpp  vertex.glsl
open-gl/4.advanced-open-gl/29.3.asteroid-field/: model-vertex.glsl
open-gl/4.advanced-open-gl/29.4.asteroid-field-instanced/: main.cpp  model-fragment.glsl
open-gl/4.advanced-open-gl/30.2.multisampling-offscreen/: main.cpp  screen-fragment.glsl
open-gl/5-hello-triangle/: CMakeLists.txt
open-gl/5.advanced-lighting/31.1.blinn-phong/: fragment.glsl  main.cpp
open-gl/5.advanced-lighting/32.1.gamma-correction/: main.cpp
open-gl/5.advanced-lighting/32.3.attenuation/: fragment.glsl  main.cpp
open-gl/5.advanced-lighting/33.1.shadow-mapping/: fragment.glsl
open-gl/5.advanced-lighting/33.2.shadows/: fragment.glsl
open-gl/5.advanced-lighting/33.3.shadow-bias/: depth-vertex.glsl  fragment.glsl  quad-fragment.glsl
open-gl/5.advanced-lighting/33.5.oversampling/: fragment.glsl
open-gl/5.advanced-lighting/34.1.depth-cubemap/: object-fragment.glsl
open-gl/5.advanced-lighting/34.1.shadow-bias/: main.cpp
open-gl/5.advanced-lighting/34.2.pcf/: depth-vertex.glsl  object-fragment.glsl
open-gl/5.advanced-lighting/34.3.oversampling/: main.cpp  quad-vertex.glsl
open-gl/5.advanced-lighting/35.1.normal-mapping/: main.cpp  wall-fragment.glsl
open-gl/5.advanced-lighting/35.2.tangents-and-bitangents/: main.cpp  wall-vertex.glsl
open-gl/5.advanced-lighting/35.3.assimp-normal-map/: main.cpp
open-gl/includes/learnopengl/: camera.h  mesh.h  model.h  shader.h
(+134 files in other folders)
